Removed base URI links and bolded instead

--- a/APIDocumentation/cnf-documentation-en.html
+++ b/APIDocumentation/cnf-documentation-en.html
@@ -179,7 +179,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>The Canadian Nutrient File (CNF) is the standard reference food composition database reporting the amount of nutrients in foods commonly consumed in Canada.</p>                        
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                            The base URI for the Canadian Nutrient File Database is&nbsp;<a href="https://food-nutrition.canada.ca/api/canadian-nutrient-file/">https://food-nutrition.canada.ca/api/canadian-nutrient-file/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
+                            The base URI for the Canadian Nutrient File Database is <strong>https://food-nutrition.canada.ca/api/canadian-nutrient-file/</strong> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
                     </section>
                     <section>
                         <!-- Remove Food Group section Jan 25
