--- a/APIDocumentation/cnf-documentation-fr.html
+++ b/APIDocumentation/cnf-documentation-fr.html
@@ -179,7 +179,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.</p>                        
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur le Fichier canadien sur les éléments nutritifs est &nbsp;<a href="https://aliments-nutrition.canada.ca/api/fichier-canadien-elements-nutritifs/">https://aliments-nutrition.canada.ca/api/fichier-canadien-elements-nutritifs/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
+                        L'adresse URI de base sur le Fichier canadien sur les éléments nutritifs est <strong>https://aliments-nutrition.canada.ca/api/fichier-canadien-elements-nutritifs/</strong> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
                     </section>
                     <section>
                         <!--Food Group-section-remove Jan 25 no food group link data 
