--- a/APIDocumentation/cta-documentation-en.html
+++ b/APIDocumentation/cta-documentation-en.html
@@ -152,7 +152,7 @@
                         <p>The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.</p>
                         <p>
                             This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                            The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/clinical-trial/">https://health-products.canada.ca/api/clinical-trial/</a> and you can add parameters to it. Any requests are made relative to this URI.
+                            The base URI for the Notice of Compliance Database is <strong>https://health-products.canada.ca/api/clinical-trial/</strong> and you can add parameters to it. Any requests are made relative to this URI.
                         </p>                        
                     </section>                    
                     <!--Sponsor-section-start-->
