--- a/APIDocumentation/cvp-documentation-en.html
+++ b/APIDocumentation/cvp-documentation-en.html
@@ -197,7 +197,7 @@
                             <h2 id="a1">Introduction</h2>
                             <p>The Canada Vigilance Adverse Reaction Online Database contains information about suspected adverse reactions (also known as side effects) to health products.</p>
                             <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                            The base URI for the Canada Vigilance Product (CVP) is&nbsp;<a href="https://health-products.canada.ca/api/canada-vigilance/">https://health-products.canada.ca/api/canada-vigilance/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                            
+                            The base URI for the Canada Vigilance Product (CVP) is <strong>https://health-products.canada.ca/api/canada-vigilance/</strong> and you can add parameters to it. Any requests are made relative to this URI.</p>                            
                         </section>
 
                         <section>
