--- a/APIDocumentation/summary-report-documentation-en.html
+++ b/APIDocumentation/summary-report-documentation-en.html
@@ -126,7 +126,7 @@
                         <p>The Drug and Health Product Register brings together Information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.</p>
                         <p>
                             This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                            The base URI for the Summary Reports is&nbsp;<a href="https://health-products.canada.ca/api/summary-report/api/">https://health-products.canada.ca/api/summary-report/api/</a> and you can add parameters to it. Any requests are made relative to this URI.
+                            The base URI for the Summary Reports is <strong>https://health-products.canada.ca/api/summary-report/api/</strong> and you can add parameters to it. Any requests are made relative to this URI.
                         </p>
                      </section>
                     <!--h2-section-end-->
