--- a/APIDocumentation/lnhpd-documentation-en.html
+++ b/APIDocumentation/lnhpd-documentation-en.html
@@ -180,7 +180,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>The Licensed Natural Health Products Database (LNHPD) contains information about natural health products (NHPs) that have been issued a product licence by Health Canada.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                        The base URI for the Licensed Natural Health Products Database&nbsp;<a href="https://health-products.canada.ca/api/natural-licences/">https://health-products.canada.ca/api/natural-licences/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>
+                        The base URI for the Licensed Natural Health Products Database is <strong>https://health-products.canada.ca/api/natural-licences/</strong> and you can add parameters to it. Any requests are made relative to this URI.</p>
                     </section>
                     <!-- Introduction end -->
                     <!-- Medicinal INGREDIENT start -->
