--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -121,7 +121,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                            L'adresse URI de base sur les rapports sommaires est &nbsp;<a href="https://produits-sante.canada.ca/api/rapports-sommaires/api/">https://produits-sante.canada.ca/api/rapports-sommaires/api/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.
+                            L'adresse URI de base sur les rapports sommaires est <strong>https://produits-sante.canada.ca/api/rapports-sommaires/api/</strong> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.
                         </p>                        
                     </section>
                     <!--Summary Basis of Decision-section-start-->
